# lan-messaging-notifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh
app/: main.py
config/: config.py
src/: __init__.py  app.py  config.py
src/notifiers/: __init__.py  base.py  slack.py  telegram.py  whatsapp.py
src/utils/: logger.py
tests/: test_app.py  test_notifiers.py
